All steps for nightly pipeline.